FindBugs corrections